--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employee-registeration-form-vuejs",
+  "name": "vue3-firebase",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,14 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "firebase": "^8.10.0",
+    "lodash": "^4.17.21",
+    "vue": "^3.2.26",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
   }
 }
